[tool.poetry]
name = "test-dependency"
version = "0.3.0"
description = ""
authors = ["Bradley Sherman <bradley@reef.ai>"]

[tool.poetry.dependencies]
python = "3.9"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
